Renamed data-columns to sf-columns, grid example content

--- a/styleguide/styleguide.html
+++ b/styleguide/styleguide.html
@@ -58,7 +58,7 @@
             </section>
         </header>
         <main>
-            <section role="region" id="intro" sf-unit>
+            <section id="intro" sf-unit>
                 <article role="region">
                     <p>
                         <strong>SFUMATO is primarily a scalable layout framework</strong>, but it also provides a browser reset and 
@@ -80,8 +80,8 @@
                 </article>
             </section>
 
-            <section role="region" id="toc-headlines" sf-unit>
-                <article role="grid" data-columns="1" sf-gutters>
+            <section id="toc-headlines" sf-unit>
+                <article role="grid" sf-columns="1" sf-gutters>
                     <div role="gridcell">
                         <h1>
                             <span class="fa-stack fa-2x">
@@ -104,8 +104,8 @@
                 </nav>
             </section>
 
-            <section role="region" id="toc-mixed-content" sf-unit>
-                <article role="grid" data-columns="1" sf-gutters>
+            <section id="toc-mixed-content" sf-unit>
+                <article role="grid" sf-columns="1" sf-gutters>
                     <div role="gridcell">
                         <h1>
                             <span class="fa-stack fa-2x">
@@ -147,8 +147,8 @@
                 </nav>
             </section>
 
-            <section role="region" id="toc-lists" sf-unit>
-                <article role="grid" data-columns="1" sf-gutters>
+            <section id="toc-lists" sf-unit>
+                <article role="grid" sf-columns="1" sf-gutters>
                     <div role="gridcell">
                         <h1>
                             <span class="fa-stack fa-2x">
@@ -161,7 +161,7 @@
                         </p>
                     </div>
                 </article>
-                <article id="list-examples" role="grid" data-columns="2" sf-gutters>
+                <article id="list-examples" role="grid" sf-columns="2" sf-gutters>
                     <div role="gridcell">
                         <h3>Ordered List</h3>
                         <ol>
@@ -210,7 +210,7 @@
                 </nav>
             </section>
 
-            <section role="region" id="toc-tables" sf-unit>
+            <section id="toc-tables" sf-unit>
                 <h1>
                     <span class="fa-stack fa-2x">
                         <i class="fa fa-circle fa-stack-2x"></i>
@@ -276,7 +276,7 @@
                 </nav>
             </section>
 
-            <section role="region" id="toc-code" sf-unit>
+            <section id="toc-code" sf-unit>
                 <h1>
                     <span class="fa-stack fa-2x">
                         <i class="fa fa-circle fa-stack-2x"></i>
@@ -302,8 +302,8 @@
                 </nav>
             </section>
             
-            <section role="region" id="toc-media" sf-unit>
-                <article role="grid" data-columns="1" sf-gutters>
+            <section id="toc-media" sf-unit>
+                <article role="grid" sf-columns="1" sf-gutters>
                     <div role="gridcell">
                         <h1>
                             <span class="fa-stack fa-2x">
@@ -313,7 +313,7 @@
                         </h1>
                     </div>
                 </article>
-                <article id="media-examples" role="grid" data-columns="2" sf-gutters>
+                <article id="media-examples" role="grid" sf-columns="2" sf-gutters>
                     <div role="gridcell">
                         <div class="video-wrapper">
                             <div role="video">
@@ -350,8 +350,8 @@
                 </nav>
             </section>
 
-            <section role="region" id="toc-colors" sf-unit>
-                <article role="grid" data-columns="1" sf-gutters>
+            <section id="toc-colors" sf-unit>
+                <article role="grid" sf-columns="1" sf-gutters>
                     <div role="gridcell">
                         <h1>
                             <span class="fa-stack fa-2x">
@@ -364,7 +364,7 @@
                         </p>
                     </div>
                 </article>
-                <article id="color-swatches-base" role="grid" data-columns="5" sf-gutters>
+                <article id="color-swatches-base" role="grid" sf-columns="5" sf-gutters>
                     <div role="gridcell">
                         <div role="listitem">
                             <div><span></span><strong></strong><a></a></div>
@@ -471,8 +471,8 @@
                 </nav>
             </section>
 
-            <section role="region" sf-unit>
-                <article role="grid" data-columns="1" sf-gutters>
+            <section sf-unit>
+                <article role="grid" sf-columns="1" sf-gutters>
                     <div role="gridcell">
                         <h1>
                             <span class="fa-stack fa-2x">
@@ -485,7 +485,7 @@
                         </p>
                     </div>
                 </article>
-                <article id="color-swatches-theme" role="grid" data-columns="5" sf-gutters>
+                <article id="color-swatches-theme" role="grid" sf-columns="5" sf-gutters>
                     <div role="gridcell">
                         <div role="listitem">
                             <div><span></span><strong></strong><a></a></div>
@@ -567,8 +567,8 @@
                 </nav>
             </section>
 
-            <section role="region" id="toc-form-elements" sf-unit>
-                <article role="grid" data-columns="1" sf-gutters>
+            <section id="toc-form-elements" sf-unit>
+                <article role="grid" sf-columns="1" sf-gutters>
                     <div role="gridcell">
                         <h1>
                             <span class="fa-stack fa-2x">
@@ -581,7 +581,7 @@
                 <article id="form-unit">
                     <form>
                         <h3>Buttons</h3>
-                        <section id="form-buttons" role="grid" data-columns="4" sf-gutters>
+                        <section id="form-buttons" role="grid" sf-columns="4" sf-gutters>
                             <section role="gridcell">
                                 <input type="button" value="input; type=button">
                             </section>
@@ -604,7 +604,7 @@
                                 <button type="button" disabled>button; type=button disabled</button>
                             </section>
                         </section>
-                        <section id="form-fields" role="grid" data-columns="2" sf-gutters>
+                        <section id="form-fields" role="grid" sf-columns="2" sf-gutters>
                             <div role="gridcell">
                                 <h3>Text input</h3>
                                 <fieldset>
@@ -614,13 +614,13 @@
                                     </div>
                                 </fieldset>
                                 <fieldset>
-                                    <label for="text2">Readonly text input</label>
+                                    <label for="text2">Readonly input</label>
                                     <div role="textbox" readonly>
                                         <input type="text" placeholder="Readonly Text Input" id="text2" readonly>
                                     </div>
                                 </fieldset>
                                 <fieldset>
-                                    <label for="text3">Disabled text input</label>
+                                    <label for="text3">Disabled input</label>
                                     <div role="textbox" disabled>
                                         <input type="text" placeholder="Disabled Text Input" id="text3" disabled>
                                     </div>
@@ -760,7 +760,7 @@
                                 </fieldset>
                             </div>
                         </section>
-                        <section id="form-fields" role="grid" data-columns="2" sf-gutters>
+                        <section id="form-fields" role="grid" sf-columns="2" sf-gutters>
                             <div role="gridcell">
                                 <h3>Checkbox list</h3>
                                 <fieldset>
